--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
         <img src="./assets/images/birthday-cake.png" height="200"/>
         <hr />
-        <a href="../4.1 Webpages/public/about.html">About Me</a>
-        <a href="../4.1 Webpages/public/contact.html">Contact Me</a>
+        <a href="./4.1 Webpages/public/about.html">About Me</a>
+        <a href="./4.1 Webpages/public/contact.html">Contact Me</a>
     </body>
  </html>
 
